# GENAI_practices_and_assignments

./: .gitignore  Q&A.py  README.md  Rag_practice.py  Wikipedia_RAG.py  app.py  auto_commit.py  pyproject.toml  requirements.txt
